--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^21.12.3",
+    "@react-native-firebase/storage": "^21.12.3",
     "@react-navigation/bottom-tabs": "^7.3.3",
     "@react-navigation/native": "^7.0.19",
     "react": "19.0.0",
     "react-native": "0.78.1",
     "react-native-gesture-handler": "^2.24.0",
+    "react-native-image-picker": "^8.2.0",
     "react-native-reanimated": "^3.17.1",
     "react-native-safe-area-context": "^5.3.0",
-    "react-native-screens": "^4.9.2"
+    "react-native-screens": "^4.9.2",
+    "react-native-uuid": "^2.0.3",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -32,6 +37,7 @@
     "@react-native/typescript-config": "0.78.1",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.0.0",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^19.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
