--- a/package.json
+++ b/package.json
@@ -10,14 +10,23 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.3",
+    "@react-navigation/drawer": "^7.3.3",
+    "@react-navigation/elements": "^2.3.2",
     "@react-navigation/native": "^7.0.19",
+    "axios": "^1.8.4",
+    "parse": "^6.1.0",
     "react": "19.0.0",
     "react-native": "0.78.1",
     "react-native-gesture-handler": "^2.24.0",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-onesignal": "^5.2.9",
     "react-native-reanimated": "^3.17.1",
     "react-native-safe-area-context": "^5.3.0",
-    "react-native-screens": "^4.9.2"
+    "react-native-screens": "^4.9.2",
+    "react-native-uuid": "^2.0.3",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -30,7 +39,9 @@
     "@react-native/eslint-config": "0.78.1",
     "@react-native/metro-config": "0.78.1",
     "@react-native/typescript-config": "0.78.1",
+    "@types/axios": "^0.14.4",
     "@types/jest": "^29.5.13",
+    "@types/parse": "^3.0.9",
     "@types/react": "^19.0.0",
     "@types/react-test-renderer": "^19.0.0",
     "eslint": "^8.19.0",
